# trible

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INVENTORY.md  README.md
scripts/: preflight.sh
src/: chat.rs  main.rs  main.rs.orig  transaction.rs  trible.rs
src/chat/: ggufarchive.rs  token_output_stream.rs  util.rs
src/chat/util/: token_output_stream.rs
src/cli/: branch.rs  mod.rs  pile.rs  store.rs  util.rs
src/cli/pile/: blob.rs  branch.rs  diagnose.rs  merge.rs  migrate.rs  mod.rs  net.rs  signing.rs  squash.rs
src/cli/store/: blob.rs  branch.rs  mod.rs
tests/: basic.rs  branch_set_e2e.rs  cli.rs  cli.rs.orig  consolidate_e2e.rs  pile.rs  reflog_e2e.rs  store.rs
