[package]
name = "trible"
version = "0.3.0"
authors = ["⚫️ <jp@bultmann.eu>"]
edition = "2021"
description = "A knowledge graph and meta file system for object stores."
homepage = "https://tribles.space"
repository = "https://github.com/triblesspace/trible"
license = "MIT"
readme = "README.md"
keywords = [
    "cli",
    "tribles",
    "knowledge-graph",
    "filesystem",
    "object-store",
]
categories = [
    "command-line-utilities",
    "filesystem",
    "database-implementations",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
anyhow = "1.0.80"
rand = "0.8.5"
hex = "0.4.3"
tribles = { git = "https://github.com/triblespace/tribles-rust.git", branch = "main" }
file_type = "=0.8.7"
chrono = "0.4"
object_store = { version = "0.12", default-features = false, features = ["aws", "fs"] }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
url = "2"
ed25519-dalek = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
blake3 = "1.8.2"
