[package]
name = "trible"
version = "0.12.0"
authors = ["⚫️ <jp@bultmann.eu>"]
edition = "2021"
description = "A knowledge graph and meta file system for object stores."
homepage = "https://tribles.space"
repository = "https://github.com/triblespace/trible"
license = "MIT"
readme = "README.md"
keywords = [
    "cli",
    "tribles",
    "knowledge-graph",
    "filesystem",
    "object-store",
]
categories = [
    "command-line-utilities",
    "filesystem",
    "database-implementations",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
anyhow = "1.0.101"
getrandom = "0.4.1"
hex = "0.4.3"
triblespace = "0.15.0"
triblespace-core = "0.15.0"
file_type = "0.8.11"
chrono = "0.4"
object_store = { version = "0.13.1", default-features = false, features = ["aws", "fs"] }
futures = "0.3"
url = "2"
ed25519-dalek = "2.2.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
blake3 = "1.8.3"
